# shoebot_project

./: README.md  face_id.py
ai_manipulation/: package.xml  setup.cfg  setup.py
ai_manipulation/ai_manipulation/datas/: linear_model.pkl  linear_model_2.pkl  linear_model_3.pkl  manipulator_angle_range.json  openmanipulator_acts.json  openmanipulator_states.json  openmanipulator_weight.pkl  saved_model.pb  six_dxl_acts.json  six_dxl_model.pkl  six_dxl_states.json  way_point_1.json  way_point_2.json
ai_manipulation/ai_manipulation/datas/backups/: acts_1st_11071120.json  acts_2nd_episode74_11071857.json  acts_3rd_11081632.json  acts_4th_11091823.json  openmanipulator_weight.pkl  six_dxl_model.pkl  states_1st_11071120.json  states_2nd_episode74_11071857.json  states_3rd_11081632.json  states_4th_11091822.json
ai_manipulation/ai_manipulation/datas/backups copy/watpoint backup/: way_point_1(마그니위에서 모형신발).json
ai_manipulation/ai_manipulation/datas/backups/watpoint backup/: way_point_1(1026_모형신발 new좌표).json  way_point_1(모형신발 초기).json  way_point_2(1026_모형신발 new좌표).json  way_point_2(마그니위에서 모형신발).json  way_point_2(모형신발초기).json
ai_manipulation/ai_manipulation/datas/variables/: variables.data-00000-of-00001  variables.index
ai_manipulation/ai_manipulation/script/: Down_list.json  check_episode_again.ipynb  json_edit.ipynb  linear.py  log.txt  log_left_again.txt  make_my_model.py  media.py  run_my_model.py  shoe_drop_point_gen.py  six_dxl_model.py  six_dxl_run.py  test.ipynb  test_seokwon.py  test_tensor_model.ipynb  testing.py  z_value.py
ai_manipulation/ai_manipulation/script/joint_angle_data/: Down_present_joint_angle.json  Up_present_joint_angle.json
ai_manipulation/ai_manipulation/script/list_2차_1025/: Down_list.json  Down_present_joint_angle.json  Up_list.json  Up_present_joint_angle.json
ai_manipulation/ai_manipulation/script/list_backup/1027/: Down_list.json  Up_list.json
ai_manipulation/ai_manipulation/script/list_backup/1028/: Up_list.json
ai_manipulation/ai_manipulation/utils/: calibration_matrix.npy  distortion_coefficients.npy
ai_manipulation/ai_manipulation/utils/models/: common.py  experimental.py  yolov3-tiny.yaml
ai_manipulation/ai_manipulation/utils/utils/: augmentations.py  dataloaders.py  general.py  metrics.py  torch_utils.py
gui_shoebot/: package.xml  setup.cfg  setup.py
gui_shoebot/my_new_package/: Gui_ShoeBot.py  Gui_ShoeBot_PyQt.ui  Readme.md  Self_Test_MiniBot.py  Self_Test_Roboarm.py  Self_Test_faceid.py
gui_shoebot/test/: boolTrueoryes.py
maniuplator_sdk/dynamixel-workbench/dynamixel_workbench_toolbox/: CMakeLists.txt
maniuplator_sdk/dynamixel-workbench/dynamixel_workbench_toolbox/examples/: CMakeLists.txt  package.xml
maniuplator_sdk/dynamixel-workbench/dynamixel_workbench_toolbox/examples/src/: a_Model_Scan.cpp  b_Ping.cpp  c_ID_Change.cpp  d_BPS_Change.cpp  dxl_controller.cpp  e_Mode_Change.cpp  f_Reboot.cpp  g_Reset.cpp  h_Position.cpp  i_Velocity.cpp  j_Current_Based_Position.cpp  k_Read_Write.cpp  l_Sync_Write.cpp  m_Sync_Read_Write.cpp  n_Bulk_Read_Write.cpp  o_Find_Dynamixel.cpp  p_Monitor.cpp
maniuplator_sdk/open_manipulator/open_manipulator_x_controller/src/: open_manipulator_x_controller.cpp
maniuplator_sdk/open_manipulator/open_manipulator_x_libs/: package.xml
maniuplator_sdk/open_manipulator/open_manipulator_x_teleop/: setup.py
maniuplator_sdk/open_manipulator/open_manipulator_x_teleop/open_manipulator_x_teleop/script/: teleop_keyboard.py
minibot_driving/: package.xml  setup.cfg  setup.py
minibot_driving/minibot_driving/: client.py  drive.py  node_drive.py  service.py
pinklab_minibot_robot/minibot_description/meshes/visual/: base_link.dae
pinklab_minibot_robot/minibot_gazebo/launch/: bringup_gazebo.launch.py
