<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_manipulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sechan@todo.todo">sechan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
